--- a/www/index.html
+++ b/www/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
     <title></title>
-    <meta http-equiv="Content-Security-Policy" content="default-src * 'unsafe-inline' 'unsafe-eval'">
+    <meta http-equiv="Content-Security-Policy" content="default-src * &apos;unsafe-inline&apos; &apos;unsafe-eval&apos;">
 
     <!-- Latest compiled and minified CSS -->
     <!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">-->
@@ -29,7 +29,741 @@
     <!-- IF using Sass (run gulp sass first), then uncomment below and remove the CSS includes above
     <link href="css/ionic.app.css" rel="stylesheet">
     -->
+    <style>
+      /* Empty. Add your own CSS if you like */
 
+      body {
+        font-family: 'Open Sans', sans-serif;
+        background: #e4e7ec;
+        font-weight: 600;
+      }
+
+      h1, h2, h3, h4, h5, h6 {
+
+        font-family: 'Montserrat', sans-serif;
+        font-weight: bold;
+      }
+
+      a {
+        color: #000;
+
+        font-weight: bold;
+      }
+
+      ul {
+        margin-bottom: 0;
+      }
+
+      .list-inline > li {
+        padding-left: 15px;
+        padding-right: 15px;
+      }
+
+      .text-muted {
+        color: #90939a;
+      }
+
+      .navbar {
+        border: 0;
+        box-shadow: 0 2px 5px 0 rgba(0, 0, 0, .26);
+      }
+
+      .navbar-header {
+
+        font-weight: bold;
+        float: left;
+        padding-left: 15px;
+      }
+
+      .navbar-nav {
+        float: left;
+        margin: 0;
+      }
+
+      .navbar-nav > li {
+        float: left;
+      }
+
+      .navbar-nav > li > a {
+        padding: 15px;
+      }
+
+      .navbar-default {
+        color: #fff;
+        background: #fff;
+      }
+
+      .navbar-default .navbar-brand {
+        color: #333;
+        background-color: #ffe939;
+      }
+
+      .navbar-default .navbar-brand:hover {
+        color: #ffe939;
+        background-color: #333;
+      }
+
+      .navbar-brand {
+        margin-left: -15px;
+        transition: 0.25s all;
+      }
+
+      .panel {
+        border-color: #cfd9D7;
+        border-radius: 2px;
+        box-shadow: 0 8px 17px rgba(0, 0, 0, .2);
+      }
+
+      .panel-default > .panel-heading {
+        font-size: 85%;
+        font-weight: bold;
+        color: #444;
+        text-transform: uppercase;
+        background-color: #f6f6f6;
+        border-color: #cfd9db;
+      }
+
+      .form-control {
+        border-radius: 0;
+      }
+
+      .center-form {
+        width: 330px;
+        margin: 12% auto;
+      }
+
+      .signup-or-separator {
+        position: relative;
+        height: 34px;
+        text-align: center;
+        background: none;
+      }
+
+      .signup-or-separator hr {
+        width: 90%;
+        margin: -16px auto 10px auto;
+        border-top: 1px solid #dce0e0;
+      }
+
+      .signup-or-separator .text {
+        display: inline-block;
+        padding: 8px;
+        margin: 0;
+        background-color: #fff;
+      }
+
+      .has-feedback .form-control-feedback {
+        top: 0;
+        left: 0;
+        width: 46px;
+        height: 46px;
+        line-height: 46px;
+        color: #555;
+      }
+
+      .password-strength-indicator {
+        position: absolute;
+        top: 10px;
+        right: 0;
+        width: 5px;
+        padding: 0 15px;
+      }
+
+      .password-strength-indicator span {
+        display: block;
+        width: 5px;
+        height: 5px;
+        margin-bottom: 2px;
+        background: #ebeef1;
+        border-radius: 5px;
+      }
+
+      [class^='ion-'] {
+        font-size: 1.2em;
+      }
+
+      .has-feedback .form-control {
+        padding-left: 42.5px;
+      }
+
+      .alert-material {
+        position: fixed;
+        right: 12px;
+        bottom: 12px;
+        z-index: 1;
+        display: inline-block;
+        min-height: 48px;
+        padding: 13px 24px 12px;
+        font-family: 'Roboto', sans-serif;
+        color: #f1f1f1;
+        cursor: default;
+        background: #323232;
+        border-radius: 2px;
+        outline: none;
+        box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.26);
+      }
+
+      .profile-picture {
+        height: 100px;
+        display: block;
+      }
+
+      .btn {
+        font-weight: bold;
+        border-radius: 2px;
+        box-shadow: 0 2px 5px 0 rgba(0, 0, 0, .26);
+      }
+
+      .btn-primary {
+        background-color: #4285f4;
+      }
+
+      .btn-primary:hover {
+        background-color: #3367d6;
+      }
+
+      .btn-success {
+        background-color: #0f9d58;
+      }
+
+      .btn-success:hover {
+        background-color: #196c4a;
+      }
+
+      .btn-danger {
+        background-color: #db4437;
+      }
+
+      .btn-danger:hover {
+        background-color: #b04c3b;
+      }
+
+      .btn-group-vertical .btn {
+        margin-bottom: 10px;
+      }
+
+      .btn-group-vertical > .btn:first-child:not(:last-child) {
+        border-radius: 2px;
+      }
+
+      .btn-group-vertical > .btn:not(:first-child):not(:last-child) {
+        border-radius: 2px;
+      }
+
+      .btn-group-vertical > .btn:last-child:not(:first-child) {
+        border-radius: 2px;
+      }
+
+      .btn-lg {
+        font-size: 14px;
+      }
+
+      .btn [class^='ion-'] {
+        margin-right: 5px;
+      }
+
+      .btn .fa {
+        margin-right: 5px;
+      }
+
+      /*********************
+      * Social Buttons
+      *********************/
+
+      .btn-google-plus {
+        color: #fff;
+        background-color: #dd4b39;
+        border: 1px solid #d54331;
+      }
+
+      .btn-google-plus:hover,
+      .btn-google-plus:focus {
+        color: #fff;
+        background-color: #cb3927;
+      }
+
+      .btn-facebook {
+        color: #fff;
+        background-color: #3b5998;
+        border: 1px solid #335190;
+      }
+
+      .btn-facebook:hover,
+      .btn-facebook:focus {
+        color: #fff;
+        background-color: #294786;
+      }
+
+      .btn-linkedin {
+        color: #fff;
+        background-color: #007bb6;
+        border: 1px solid #0073ae;
+      }
+
+      .btn-linkedin:hover,
+      .btn-linkedin:focus {
+        color: #fff;
+        background-color: #0069a4;
+      }
+
+      .btn-twitter {
+        color: #fff;
+        background-color: #00aced;
+        border: 1px solid #009fdb;
+      }
+
+      .btn-twitter:hover,
+      .btn-twitter:focus {
+        color: #fff;
+        background-color: #0090c7;
+      }
+
+      .btn-foursquare {
+        color: #fff;
+        background-color: #f94877;
+        border: 1px solid #f8215a;
+      }
+
+      .btn-foursquare:hover,
+      .btn-foursquare:focus {
+        color: #fff;
+        background-color: #f71752;
+      }
+
+      .btn-github {
+        color: #fff;
+        background-color: #444;
+        border: 1px solid #3b3b3b;
+      }
+
+      .btn-github:hover,
+      .btn-github:focus {
+        color: #fff;
+        background-color: #303030;
+      }
+
+      .btn-instagram {
+        color: #fff;
+        background-color: #3f729b;
+      }
+
+      .btn-instagram:hover,
+      .btn-instagram:focus {
+        color: #fff;
+        background-color: #305777;
+      }
+
+      .btn-yahoo {
+        color: #fff;
+        background-color: #720e9e;
+      }
+
+      .btn-yahoo:hover,
+      .btn-yahoo:focus {
+        color: #fff;
+        background-color: #600e85;
+      }
+
+      .btn-live {
+        color: #fff;
+        background-color: #2672ec;
+      }
+
+      .btn-live:hover,
+      .btn-live:focus {
+        color: #fff;
+        background-color: #125acd;
+      }
+
+      .btn-twitch {
+        color: #fff;
+        background-color: #6441a5;
+      }
+
+      .btn-twitch:hover,
+      .btn-twitch:focus {
+        color: #fff;
+        background-color: #7550ba;
+      }
+
+      .btn-bitbucket {
+        color: #fff;
+        background-color: #10375e;
+      }
+
+      .btn-bitbucket:hover,
+      .btn-bitbucket:focus {
+        color: #fff;
+        background-color: #0d2c4a;
+      }
+
+      /*********************
+      * Animations
+      *********************/
+
+      .fadeZoom.ng-enter {
+        -webkit-animation-duration: 0.6s, 0.2s;
+        -moz-animation-duration: 0.2s, 0.2s;
+        -ms-animation-duration: 0.2s, 0.2s;
+        animation-duration: 0.2, 0.2s;
+        -webkit-animation-name: fadeIn, zoomIn;
+        -moz-animation-name: fadeIn, zoomIn;
+        -ms-animation-name: fadeIn, zoomIn;
+        animation-name: fadeIn, zoomIn;
+      }
+
+      .fadeZoomFadeDown.ng-enter {
+        -webkit-animation-duration: 0.2s, 0.2s;
+        -moz-animation-duration: 0.2s, 0.2s;
+        -ms-animation-duration: 0.2s, 0.2s;
+        animation-duration: 0.2s, 0.2s;
+        -webkit-animation-name: fadeIn, zoomIn;
+        -moz-animation-name: fadeIn, zoomIn;
+        -ms-animation-name: fadeIn, zoomIn;
+        animation-name: fadeIn, zoomIn;
+      }
+
+      .fadeZoomFadeDown.ng-leave {
+        -webkit-animation: fadeOutDown 0.2s;
+        -moz-animation: fadeOutDown 0.2s;
+        -ms-animation: fadeOutDown 0.2s;
+        animation: fadeOutDown 0.2s;
+      }
+
+      @-webkit-keyframes zoomIn {
+        0% {
+          opacity: 0;
+          -webkit-transform: scale3d(0.8, 0.8, 0.8);
+          -moz-transform: scale3d(0.8, 0.8, 0.8);
+          -ms-transform: scale3d(0.8, 0.8, 0.8);
+          transform: scale3d(0.8, 0.8, 0.8);
+        }
+
+        50% {
+          opacity: 1;
+        }
+      }
+
+      @keyframes zoomIn {
+        0% {
+          opacity: 0;
+          -webkit-transform: scale3d(0.8, 0.8, 0.8);
+          -moz-transform: scale3d(0.8, 0.8, 0.8);
+          -ms-transform: scale3d(0.8, 0.8, 0.8);
+          transform: scale3d(0.8, 0.8, 0.8);
+        }
+
+        50% {
+          opacity: 1;
+        }
+      }
+      .bar-header{
+        color:white;
+      }
+      .bar-stable {
+        color:white;
+      }
+      .bar.bar-stable .title {
+        background-color: #5F64C0;
+        color: white;
+
+      }
+      .bar-stable.bar.bar-header {
+        background-color: #5F64C0;
+        color: white;
+        margin-left: 0px;
+
+
+      }
+      .item .list-title {
+        margin-top:10px;
+        font-family: "Roboto", serif;
+
+      }
+      .item-avatar .item-content > img:first-child {
+        position: absolute;
+        top: 16px;
+        left: 16px;
+        max-width: 45px;
+        max-height: 45px;
+        width: 100%;
+        height: 100%;
+        border-radius: 0;
+      }
+      .home-icon {
+        background: url("../img/ic_home_white_24px.svg") no-repeat;
+        height:auto;
+        width:100px;
+        background-size:100px;
+      }
+      .tabs-striped .tabs {
+        background-color:#5F64C0;
+      }
+      .tab-nav .tabs{
+        background-color:#5F64C0;
+      }
+      .tabs {
+        background-color:gray;
+      }
+      .bar.bar-stable .title {
+
+        font-weight: 600;
+      }
+      .general-nav-bar{
+        background-color:#5F64C0;
+        color:white;
+        font-weight: 600;
+      }
+      .photo-button {
+        background-color:#5A6360;
+        width:100%;
+        color:white;
+      }
+      @-webkit-keyframes pulse {
+        0% {
+          -webkit-transform: scale3d(1, 1, 1);
+          transform: scale3d(1, 1, 1);
+        }
+        50% {
+          -webkit-transform: scale3d(1.05, 1.05, 1.05);
+          transform: scale3d(1.05, 1.05, 1.05);
+        }
+        100% {
+          -webkit-transform: scale3d(1, 1, 1);
+          transform: scale3d(1, 1, 1);
+        }
+      }
+      @keyframes pulse {
+        0% {
+          -webkit-transform: scale3d(1, 1, 1);
+          transform: scale3d(1, 1, 1);
+        }
+        50% {
+          -webkit-transform: scale3d(1.05, 1.05, 1.05);
+          transform: scale3d(1.05, 1.05, 1.05);
+        }
+        100% {
+          -webkit-transform: scale3d(1, 1, 1);
+          transform: scale3d(1, 1, 1);
+        }
+      }
+      .brand-selection {
+        position: fixed;
+
+      }
+      .logo {
+        background-color: #5FB9AD;
+        font-size: 4vh;
+        height: 10vh;
+        color: white;
+      }
+      .actions {
+        position: fixed;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        background-color: #5A6362;
+        padding: 5px;
+        color: white;
+        bottom: 0;
+        left: 0;
+        right: 0;
+      }
+      .actions .action-block {
+        text-align: center;
+        width: 20%;
+      }
+      .actions .action-block .icn.home-white {
+        margin: 0 auto;
+      }
+      .actions .action-block .icn.account-white {
+        margin: 0 auto;
+      }
+      .actions .action-block .icn.explore-white {
+        margin: 0 auto;
+      }
+      .actions .action-block .icn.camera-white {
+        margin: 0 auto;
+      }
+      .actions .action-block .icn.tap-and-play-white {
+        margin: 0 auto;
+      }
+      .icn {
+        display: block;
+        width: 25px;
+        height: 25px;
+        background-size: 100%;
+        background-repeat: no-repeat;
+      }
+      .icn.pulse {
+        -webkit-animation-name: pulse;
+        animation-name: pulse;
+        -webkit-animation-duration: 1s;
+        animation-duration: 1s;
+        -webkit-animation-fill-mode: both;
+        animation-fill-mode: both;
+        animation: pulse 1s linear infinite;
+      }
+      .icn.timelapse {
+        background-image: url('../img/timelapse.svg');
+      }
+      .icn.home-white {
+        background-image: url('../img/timelapse.svg');
+      }
+      .icn.account-white {
+        background-image: url('../img/timelapse.svg');
+      }
+      .icn.explore-white {
+        background-image: url('../img/timelapse.svg');
+      }
+      .icn.camera-white {
+        background-image: url('../img/timelapse.svg');
+      }
+      .icn.tap-and-play-white {
+        background-image: url('../img/timelapse.svg');
+      }
+
+      .poll {
+        position: relative;
+        padding: 15px;
+      }
+      .poll .poll-image {
+        text-align: center;
+      }
+      .poll .poll-image .poll-image-dim {
+        width: 40vh;
+        height: 40vh;
+      }
+      .poll .poll-cta {
+        position: absolute;
+        color: black;
+        bottom: 15%;
+        font-size: 3vh;
+        left: 5%;
+        background-color: rgba(255, 255, 255, 0.65);
+      }
+      .poll .poll-cta .poll-cta-owner {
+        padding: 5px;
+      }
+      .poll .poll-cta .poll-cta-timer {
+        padding: 5px;
+      }
+      .referra-sections {
+        text-align: center;
+        font-weight: bold;
+        font-size: 3vh;
+        position: relative;
+        color:white;
+      }
+      .referra-sections-number {
+        font-size: 4vh;
+        width: 65%;
+        margin: 0 auto;
+        padding: 15px;
+        /*.circle-border {
+                      border: 1px solid white;
+                      border-radius: 50% 50%;
+                      padding:5px;
+                  }*/
+      }
+      .needs {
+        background-color: #754AB6;
+        padding: 15px 0;
+        height: 20vh;
+        word-wrap: break-word;
+
+      }
+      .referrals {
+        background-color: #8167A4;
+        padding: 25px 0;
+        height: 20vh;
+        word-wrap: break-word;
+      }
+      .brands {
+        background-color: #4CA0BC;
+        height: 20vh;
+        padding: 25px 0;
+        word-wrap: break-word;
+      }
+      .wishlist {
+        background-color: #5DAFA3;
+        height: 20vh;
+        padding: 25px 0;
+        word-wrap: break-word;
+      }
+      .start-poll {
+        position: absolute;
+        z-index: 1;
+        left: calc(50% - 40px);
+        top: calc(50% - 40px);
+      }
+      .start-poll .start-poll-img {
+        width: 80px;
+      }
+      .icon {
+        color:white;
+      }
+      .tab-title{
+        color:White;
+
+      }
+      .item-input {
+        margin-bottom: 6px;
+        display: -webkit-box;
+        display: -webkit-flex;
+        display: -moz-box;
+
+        display: -ms-flexbox;
+        display: flex;
+        -webkit-box-align: center;
+        -ms-flex-align: center;
+        -webkit-align-items: center;
+        -moz-align-items: center;
+        align-items: center;
+        position: relative;
+        overflow: hidden;
+        padding: 6px 0 5px 16px;
+      }
+      .slider {
+        margin-top:14%;
+        height: 55%;
+      }
+      .slider-slide {
+        padding-top: 80px;
+        color: #000;
+        background-color: #fff;
+        text-align: center;
+
+        font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+        font-weight: 300;
+      }
+
+      #logo {
+        margin: 30px 0px;
+      }
+
+      #list {
+        width: 170px;
+        margin: 30px auto;
+        font-size: 20px;
+      }
+      #list ol {
+        margin-top: 30px;
+      }
+      #list ol li {
+        text-align: left;
+        list-style: decimal;
+        margin: 10px 0px;
+      }
+
+      .button.ng-hide{
+        display:none;
+      }
+      .row {
+        padding:0px!important;
+      }
+
+    </style>
     <!-- ionic/angularjs js -->
     <script src="lib/ionic/js/ionic.bundle.js"></script>
     <script src="lib/ionic-platform-web-client/dist/ionic.io.bundle.min.js"></script>
@@ -40,6 +774,8 @@
     <script src="lib/firebase.js"></script>
     <!-- your app's js -->
     <script src="js/app.js"></script>
+    <script src="lib/ngCordova/dist/ng-cordova.js"></script>
+    <script src="cordova.js"></script>
     <script src="js/controllers.js"></script>
     <script src="js/services.js"></script>
     <script src="js/index/poll.js"></script>
